fix the landing page and the show page because before were overflowing

--- a/app/assets/stylesheets/pages/_landing_container_all.scss
+++ b/app/assets/stylesheets/pages/_landing_container_all.scss
@@ -5,6 +5,7 @@
 .landing-page-navigation{
   display: flex;
   height: 10px;
+  margin-bottom: 25px;
   .first-nav{
     flex: 0 0 33%;
     border-radius: 15px;
